<resources>
    <string name="app_name">Android4TV2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="spinner_choose_title">Choose:</string>
    <string name="program_block">Program block</string>
    <string name="null_pointer_error">Null pointer error!</string>
    <string name="proxy_service_is_null">Proxy service is null!</string>
    <string name="zero_number">0</string>
    <string name="scaning">Scanning</string>
    <string name="connecting">Connecting</string>
    <string name="please_wait">Please wait…</string>
    <string name="google_play_error">There is no Google Play installed!</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="exit_massage">Are you sure you want to exit?</string>
    <string name="ask_massage">Are you sure?</string>
    <string name="ask_massage_factory_reset">This will erase all saved data!</string>
    <string name="factory_reset_success">Factory reset is successfully done.</string>
    <string name="factory_reset_fail">Factory reset has failed!</string>
    <string name="already_in_favorites">Item is already in favorites!</string>
    <string name="already_in_this_folder">Already in this folder!</string>
    <string name="already_active">Already active</string>
    <string name="loading_message">Please wait…</string>
    <string name="loading_title">Loading</string>
    <string name="no_enough_space_on_screen">There is no enough empty space on screen!</string>
    <string name="loading_data">Loading data</string>
    <string name="aborting_scan">Aborting scan</string>
    <string name="inputs_not_enabled">Inputs are not enabled!</string>
    <string name="input_not_connected">Input is not connected!</string>
    <string name="connected_input">Connected input!</string>
    <string name="disconnected_input">Disconnected input!</string>
    <string name="connected_input_is_disabled">Connected input is disabled!</string>
    <string name="input_is_disabled">Input is disabled!</string>
    <string name="previous_input_is_disabled">Previous input is disabled!</string>
    <string name="folder_is_empty">Folder is empty!</string>
    <string name="format_is_not_supported">File format is not supported!</string>
    <string name="teletext_hide">Teletext hide!</string>
    <string name="choose_audio_language">Choose audio language</string>
    <string name="choose_audio_top_menu_value">A4TVTextView??? - change me in strings.xml</string>
    <string name="choose_audio_bottom_menu_value">A4TVTextView??? - change me in strings.xml</string>
    <string name="choose_teletext_language">Choose Teletext language</string>
    <string name="only_one_audio_language">Only one audio language!</string>
    <string name="open_default_subtitle_language">Opening default subtitle language!</string>
    <string name="no_subtitle_language">There is no subtitle language!</string>
    <string name="open_default_teletext_language">Opening default teletext language!</string>
    <string name="no_teletext_available">There is no teletext available!</string>
    <string name="no_teletext_language">There is no teletext!</string>
    <string name="choose_subtitle_language">Choose subtitle language</string>
    <string name="multimedia_no_application_available">There is no available application for this action!</string>
    <string name="no_accout_message">No available accounts to add!</string>
    <string name="epg_no_data">No data available!</string>
    <string name="epg_load_next_day">Load data for next day!</string>
    <string name="epg_load_previous_day">Load data for previous day!</string>
    <string name="epg_day_showing">Day:</string>
    <string name="epg_genre">Genre:</string>
    <string name="epg_imdb_info">Show IMDB info</string>
    <string name="epg_return">Return</string>
    <string name="epg_event_not_scheduled">Event recording is not scheduled</string>
    <string name="epg_error_with_number">Not possible to show channel with that number!</string>
    <string name="epg_not_possible_to_zapp">Not possible to show EPG in recording mode!</string>
    <string name="epg_not_supported">EPG is not supported for this input!</string>
    <string name="pvr_file_is_deleted">PVR file is deleted.</string>
    <string name="all_pvr_files_are_deleted">All PVR files are deleted.</string>
    <string name="pvr_schedule_file_is_deleted">PVR schedule file is deleted.</string>
    <string name="software_upgrade_text_part_one">There is a system update available (Version:</string>
    <string name="software_upgrade_text_part_two_upgrade">) \n Do you want to upgrade your system?</string>
    <string name="software_upgrade_text_part_two_downgrade">) \n Do you want to downgrade your system?</string>
    <string name="first_time_install_text">Welcome to Android world!</string>
    <string name="first_time_install_end_text">This is first time install ending text!!!!</string>
    <string name="first_time_install_set_language_and_country">Select language and country</string>
    <string name="first_time_install_set_tv_mode">Select TV format</string>
    <string name="first_time_install_set_accounts">Add user accounts</string>
    <string name="first_time_install_setup_network">Setup network connection</string>
    <string name="first_time_install_scan">Start scan procedure</string>
    <string name="first_time_install_scan_restart">Restart scan procedure</string>
    <string name="first_time_install_just_finish">Just finish</string>
    <string name="first_time_install_next">Advance to next set up</string>
    <string name="first_time_install_next_button_text">Next</string>
    <string name="first_time_install_no_services_found">No services found! Restart scan?</string>
    <string name="first_time_install_end_fti">Thank you for using Android4TV</string>
    <string name="reminder_event_triggered">Reminder event triggered! Do you want to change channel?</string>
    <string name="no_usb">No USB inserted!</string>
    <string name="no_usb_zip_file">No upgrade ZIP file on USB root directory!</string>
    <string name="upgrade_invalid_zip">Invalid ZIP file on USB device!</string>
    <string name="upgrade_finished_over_usb">Upgrade finished. Rebooting in 5 seconds!</string>
    <string name="upgrade_no_new_version">Your system is up to date!</string>
    <string name="parental_state_change">Confirm parental control change</string>
    <string name="config_file_error">Error in config file!</string>
    <string name="no_channel">Trying to tune to non existing service!</string>
    <string name="download_speed">Download speed</string>
    <string name="connection_time">Connection time</string>
    <string name="progress">Progress</string>
    <string name="kbs">kB/s</string>
    <string name="milisec">miliseconds</string>
    <string name="reminder_error">Error adding reminder!</string>
    <string name="connected">Connected</string>
    <string name="syncing">Syncing</string>
    <string name="cam_inserted">CAM inserted</string>
    <string name="cam_removed">CAM removed</string>
    <string name="no_cam_present">No CAM present</string>
    <string name="invalid_host_certificate">Invalid host certificate</string>
    <string name="cam_not_started">Not able to start CI session</string>
    <string name="manual_scan_prompt">Are you sure? All services will be erased!</string>
    <string name="error_with_playing_audio">Not supported audio!</string>
    <string name="channel_change_fail">Channel change failed!</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="usb_media_storage_is_full">Usb media storage is full.</string>
    <string name="usb_mounted">Media mounted</string>
    <string name="usb_ejected">Media ejected</string>
    <string name="usb_unmountable">Media can not be mounted - bad or unsupported filesystem</string>
    <string name="parental_error">Error setting parental level</string>
    <string name="under">Under</string>
    <string name="empty_list">Empty channel list!</string>
    <string name="no_services_found_during_scan">No services found!</string>
    <string name="no_service_space">Service data base is full! Aborting scan!</string>
    <string name="error_during_scan">Error occurred during scan!</string>
    <string name="freq_error">Please set correct frequency!</string>
    <string name="network_id__error">Please set correct network id!</string>
    <string name="name_error">Please set correct name!</string>
    <string name="already_exist">Already exist</string>
    <string name="downloading">Downloading</string>
    <string name="checking">Checking</string>
    <string name="not_supported_dual_scenario">Requested dual video scenario is not supported!</string>
    <string name="not_supported_action_for_input">Requested action is not supported for inputs!</string>
    <string name="swich_to_previous_content">Swich to previous content!</string>
    <string name="source_swiching">Open new source!</string>
    <string name="middleware_is_initialized">Middleware is now initialized!</string>
    <string name="parental_guidance_is_off">Parental guidance is off!</string>
    <string name="parental_guidance_is_set_on">Parental guidance is set on under</string>
    <string name="store_mode_video_presentation_not_exist">Video presentation does not exist!</string>
    <string name="add_to_favorite_list">Add to favorite list</string>
    <string name="remove_from_favorite_list">Remove from favorite list</string>
    <string name="already_in_favorite_list">Item is already in favorite list</string>
    <string name="item_is_added_in_playlist">Item is added to playlist</string>
    <string name="item_is_not_added_to_playlist">Cannot add to playlist</string>
    <string name="error_adding_in_favorite_list">Cannot add to favorite list</string>
    <string name="ci_oprofile_install_started">Operator profile installation started</string>
    <string name="ci_oprofile_install_finished">Operator profile installation completed</string>
    <string name="ci_cam_not_present">CA module not present</string>
    <string name="ci_oprofile_question_label">Do You want to install operator profile?</string>
    <string name="ci_oprofile_label">Operator profile will be installed</string>
    <string name="image_info">Press Info for more details</string>
    <string name="picture_has_not_more_details">Picture hasn\'t more details!</string>
    <string name="network_changed_dialog_title">Network changed</string>
    <string name="network_changed_dialog_need_rescan">Scan is needed to update the service list</string>
    <string name="network_changed_dialog_scan_now">Scan now</string>
    <string name="network_changed_dialog_scan_latter">Scan later</string>
    <string name="all_services">All services</string>
    <string name="epg_schedule_reminder">Schedule Reminder</string>
    <string name="epg_schedule_recording">Schedules</string>
    <string name="tv_menu_network_settings_wireless">Wireless</string>
    <string name="tv_menu_network_wireless_test_network_type">Network type</string>
    <string name="unknown">Unknown</string>
    <string name="parental_control_title">Parental control</string>
    <string name="parental_control_enter_pin">Enter PIN code:</string>
    <string name="parental_control_enter_pin_hint">Enter PIN code</string>
    <string name="parental_control_ok">Ok</string>
    <string name="next">Next:</string>
    <string name="confighandler_config_file_path">Config file path:</string>
    <string name="confighandler_generate_conf">Generate config file</string>
    <string name="confighandler_button_stb">STB DVB</string>
    <string name="confighandler_button_dvb">TV DVB</string>
    <string name="confighandler_button_atsc">TV ATSC</string>
    <string name="confighandler_button_dtmb">TV DTMB</string>
</resources>