<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="center_vertical"
        android:weightSum="3" >
        <com.iwedia.gui.components.A4TVTextView
            android:id="@+id/aTVTextView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_menu_network_wireless_test_network_type" />
        <com.iwedia.gui.components.A4TVTextView
            android:id="@+id/aTVTextViewNetworkTestNetworkType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_extra_small"
            android:layout_weight="2"
            android:text="@string/unknown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="center_vertical"
        android:weightSum="3" >
        <com.iwedia.gui.components.A4TVTextView
            android:id="@+id/aTVTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download_speed" />
        <com.iwedia.gui.components.A4TVTextView
            android:id="@+id/aTVTextViewNetworkTestDownloadSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_extra_small"
            android:layout_weight="2"
            android:text="@string/tv_menu_network_settings_wireless" />
    </LinearLayout>
</LinearLayout>