<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small"
    android:weightSum="7" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <com.iwedia.gui.components.A4TVTextView
                android:id="@+id/aTVTextViewEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/all_services"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <com.iwedia.gui.components.A4TVTextView
                android:id="@+id/aTVTextViewEventTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginTop="@dimen/padding_small"
                android:text="@string/all_services"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <com.iwedia.gui.components.A4TVTextView
                    android:id="@+id/aTVTextViewGenreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/epg_genre"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <com.iwedia.gui.components.A4TVTextView
                    android:id="@+id/aTVTextViewGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_small"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/textViewParentalRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginRight="@dimen/padding_medium"
            android:background="@drawable/red_circle"
            android:gravity="center"
            android:maxLength="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/red_normal_epg"
            android:textStyle="bold" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbarStyle="insideInset" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <com.iwedia.gui.components.A4TVTextView
                    android:id="@+id/aTVTextViewEventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <com.iwedia.gui.components.A4TVTextView
                    android:id="@+id/aTVTextViewEventComponents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:weightSum="5" >
        <com.iwedia.gui.components.A4TVButton
            android:id="@+id/aTVButtonNowNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/next" />
        <com.iwedia.gui.components.A4TVButton
            android:id="@+id/aTVButtonEpgScheduleRecording"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/epg_schedule_recording" />
        <com.iwedia.gui.components.A4TVButton
            android:id="@+id/aTVButtonEpgReminder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/epg_schedule_reminder" />
        <com.iwedia.gui.components.A4TVButton
            android:id="@+id/aTVButtonEPGIMDBInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/padding_extra_small"
            android:layout_marginLeft="@dimen/padding_extra_small"
            android:layout_toRightOf="@+id/aTVButtonEpgScheduleRecording"
            android:layout_weight="1"
            android:background="@drawable/imdb_selector"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_weight="1"
            android:gravity="center"
            android:weightSum="4" >
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/padding_extra_small"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/back_icon" />
            <com.iwedia.gui.components.A4TVTextView
                android:id="@+id/aTVTextView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/epg_return"
                android:textColor="@color/epg_text_gray_text_color" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>